<resources>
    <string name="app_name">mirbank</string>
    <string name="armenian_dram">1)Armenian dram</string>
    <string name="update_text">update</string>
    <string name="belarusian_ruble">2)Belarusian ruble</string>
    <string name="tajikistani_somoni">7)Tajikistani somoni</string>
    <string name="kyrgyzstani_som">6)Kyrgyzstani som</string>
    <string name="cuban_peso">5)Cuban peso</string>
    <string name="kazakhstani_tenge">4)Kazakhstani tenge</string>
    <string name="vietnamese_dong">3)Vietnamese dong</string>
    <string name="_1_foreign_currency_to_ruble">1 Foreign currency is equal to:</string>
    <string name="_1_ruble_to_foreign_currency">1 Ruble is equal to: </string>
    <string name="currency">Currency</string>
    <string name="uzbekistani_sum">8)Uzbekistani sum</string>
    <string name="update_button_text">Update</string>
    <string name="ruble_icon">\u20BD</string>
    <string name="armenian_icon">֏</string>
    <string name="belarus_icon">Br</string>
    <string name="vietnamese_icon">\u20AB</string>
    <string name="tenge_icon">\u20B8</string>
    <string name="cuban_peso_icon">\u20B1</string>
    <string name="kyrgyz_som_icon">c\u0332</string>
    <string name="tajik_somoni_icon">с.</string>
    <string name="uzbek_sum_icon">Sʻ</string>
    <string name="source_of_exchange_rates"><![CDATA[source ->]]></string>
    <string name="foreign_first_input">foreign currency</string>
    <string name="rate_textview">rate</string>
    <string name="division_symbol">÷</string>
    <string name="equals_sign">=</string>
    <string name="ruble_result">Ruble result</string>
    <string name="ruble_currency">ruble currency</string>
    <string name="multiply_symbol">*</string>
    <string name="fees_text">there may be fees when withdrawing money from the ATM.</string>
    <string name="foreign_result">Foreign result</string>
</resources>