<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            style="@style/RowStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/currency" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_1_foreign_currency_to_ruble" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_1_ruble_to_foreign_currency" />
        </TableRow>

        <TableRow
            style="@style/RowStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/table_border">



            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/armenian_dram" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/curr_dram_ruble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    android:text="@string/update_text" />
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    android:text="@string/ruble_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                >
            <TextView
                android:id="@+id/curr_ruble_dram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/update_text" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/armenian_icon" />
            </LinearLayout>
        </TableRow>

        <TableRow
            style="@style/RowStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/belarusian_ruble" />

            <TextView
                android:id="@+id/curr_belarus_ruble"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/update_text" />

            <TextView
                android:id="@+id/curr_ruble_belarus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/update_text" />
        </TableRow>

        <TableRow
            style="@style/RowStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/table_border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/vietnamese_dong" />

            <TextView
                android:id="@+id/curr_vietnam_ruble"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/update_text" />

            <TextView
                android:id="@+id/curr_ruble_vietnam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/update_text" />
        </TableRow>

        <TableRow
            style="@style/RowStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/table_border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/kazakhstani_tenge" />

            <TextView
                android:id="@+id/curr_tenge_rub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/update_text" />

            <TextView
                android:id="@+id/curr_rub_tenge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/update_text" />
        </TableRow>

        <TableRow
            style="@style/RowStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/table_border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/cuban_peso" />

            <TextView
                android:id="@+id/curr_cuban_rub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/update_text" />

            <TextView
                android:id="@+id/cur_rub_cuban"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/update_text" />
        </TableRow>

        <TableRow
            style="@style/RowStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/table_border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/kyrgyzstani_som" />

            <TextView
                android:id="@+id/curr_kyrgyz_rub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/update_text" />

            <TextView
                android:id="@+id/curr_rub_kyrgyz"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/update_text" />
        </TableRow>

        <TableRow
            style="@style/RowStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/table_border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/tajikistani_somoni" />

            <TextView
                android:id="@+id/curr_tajik_rub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/update_text" />

            <TextView
                android:id="@+id/curr_rub_tajik"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/update_text" />
        </TableRow>

        <TableRow
            style="@style/RowStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/table_border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/uzbekistani_sum" />

            <TextView
                android:id="@+id/curr_uzbek_rub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/update_text" />

            <TextView
                android:id="@+id/curr_rub_uzbek"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/update_text" />
        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>